[tool.poetry]
name = "sqlite-web"
version = "0.7"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Pygments = "^2.16.1"
peewee = "^3.17.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.332"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = [".venv"]